crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__helpers__templatetags__captureas.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::captureas":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs:
  "pretix.helpers.templatetags.captureas::tag::captureas":
    body_analysis_evidence: not_detected
    end_tag: endcaptureas
    intermediates: []
