crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__helpers__templatetags__date_fast.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::date_fast":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.helpers.templatetags.date_fast::filter::date_fast": optional_argument
block_specs: {}
