crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__helpers__templatetags__expiresformat.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::format_expires":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.helpers.templatetags.expiresformat::filter::format_expires": no_argument
block_specs: {}
