crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__helpers__templatetags__thumb.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::thumb":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.helpers.templatetags.thumb::filter::thumb": required_argument
block_specs: {}
